# ollama-cloud-client

./: .env.example  .gitignore  ARCHITECTURE.md  CLI.md  Cargo.toml  DEVELOPMENT.md  README.md  STATUS.md  run.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs  models.rs
src/conversation/: manager.rs  mod.rs
src/storage/: database.rs
